# reality-synchronization

./: pyproject.toml
src/reality_synchronization/: __init__.py
src/reality_synchronization/sinks/: postgis.py
src/reality_synchronization/sources/lantmateriet/: stac.py
src/reality_synchronization/sources/smhi/: svar2022.py
src/reality_synchronization/util/: __init__.py  load_remote_zip.py
src/reality_synchronization/windmill/: __init__.py
src/reality_synchronization/windmill/tasks/: __init__.py  fetch_lantmateriet_stac.py  fetch_lantmateriet_stac_items.py
